--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   </head>
 
   <body>
+    <div id="main">
+      <h1 id="title">Dr. Norman Borlaug</h1>
+      <div id="img-div">
+        <center>
+          <img src="" alt="" id="image" max-width="30px" height="45px">
+        </center>
+        <p id="img-caption">Image</p>
+      </div>
+      <h2 id="tribute-info">tribute info</h2>
+      <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.britannica.com%2Fbiography%2FNorman-Borlaug&psig=AOvVaw0wY9aFCeNzsSJzZ93dTD-O&ust=1653746122926000&source=images&cd=vfe&ved=0CAwQjRxqFwoTCNiE1Nbq__cCFQAAAAAdAAAAABAD" id="tribute-link" target="_blank">This an image</a>
+    </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
